--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 <div class=" progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
     </div>
-    <a  href="https://seventh-reality.github.io/Sterrad_Android_IOS/">        
+           
     <button slot="ar-button" id="ar-button">
         View in 4D
-    </button></a>
+    </button>
     <div id="button" style="display:flex; justify-content: space-between;">
         <img src="4.png" align="center" style="width:100px; padding-left: 5px;padding-top: 0px;" />
         <img src="iitname.png" style="width:100px; padding-right: 0px;padding-top: 0px;" />
