--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="en" dir="ltr">
-
 <head>
     <title>STERRAD™ 100NX System</title>
     <meta charset="utf-8">
     <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet" />
+    <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
     <script src="https://cdn.jsdelivr.net/npm/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src="https://threejs.org/build/three.min.js"></script>
+    <script src="./src/threejs_wasm_worker.js"></script>
+    <script href="https://developers.google.com/ar/develop/java/scene-viewer"></script>
+    <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
 </head>
 
 <body>
