--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
     </div>
 
     </model-viewer>
+     <section class="attributiontwo">
+        <p style="background-image: url('black.png')"
+            style="width:60px;height:60px; padding-left: 0px;padding-top: 10px;">
+
+            <span>
+                <a
+                    href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf"><img
+                        src="Brochure.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 17px;padding-top: 0px;"></a>
+                <a href="https://www.youtube.com/watch?v=39HnBANsPyo"><img src="Video.png" id="youtube-icon"
+                        align="center" style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+                <a
+                    href="https://www.asp.com/en-in/products/low-temperature-gas-plasma-sterilization/sterrad-100nx-allclear"><img
+                        src="web.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+                <a href="https://drive.google.com/file/d/1hFf5OK8XdV_q6UZ7WFcwiR3xrxWkUQ4Z/view?usp=sharing"><img
+                        src="serch.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+                <a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img
+                        src="form.png" id="youtube-icon" align="center"
+                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+
+            </span>
+
+    </section>   
 
     <script>
         const models = ['Steerad.glb', 'Steeradtext.glb', 'sterrad_anim.glb'];
