--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </audio> -->
         <model-viewer id="toggle-model" src="Steerad.glb"
             ios-banner="https://example.com/customBanners/comingSoonBanner.html" ar
-            ar-modes="webxr scene-viewer quick-look" camera-controls alt="" shadow-intensity=".25" touch-action="pan-y" environment-image="legacy" animation-loop="false">
+            ar-modes="webxr scene-viewer quick-look" camera-controls alt="" shadow-intensity=".25" touch-action="pan-y" environment-image="legacy" animation-loop="false" <!-- This attribute stops the animation from looping -->
+  autoplay>>
             <div class=" progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
     </div>
@@ -148,15 +149,7 @@
           handleButtonDisplay(indx);
           play_to_end();
         }
-        function play_to_end() {
-            //play to end or rewind if animation is at end//
-            const modelViewer = document.querySelector('#toggle-model');
-            modelViewer.play();
-            t = modelViewer.duration;
-            if(t == 0) t= 10;
-            t = t * 960 / 1;// because duration is in second and time to play and rewind//
-            setTimeout(stop, t);
-        }
+        
         function stop() {
             const modelViewer = document.querySelector('#toggle-model');
             modelViewer.pause();
