--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         </audio> -->
         <model-viewer id="toggle-model" src="Steerad.glb"
             ios-banner="https://example.com/customBanners/comingSoonBanner.html" ar
-            ar-modes="webxr scene-viewer quick-look" camera-controls alt="" shadow-intensity=".25" touch-action="pan-y" environment-image="legacy" animation-loop="false" <!-- This attribute stops the animation from looping -->
-  autoplay>>
+            ar-modes="webxr scene-viewer quick-look" camera-controls alt="" shadow-intensity=".25" touch-action="pan-y" environment-image="legacy" animation-loop="false" autoplay>
             <div class=" progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
     </div>
