--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <audio id="audio2">
             <source src="Usage.mp3" type="audio/mpeg">
         </audio> -->
-        <model-viewer id="toggle-model" src="Steerad.glb"
-            ios-banner="https://example.com/customBanners/comingSoonBanner.html" ar
-            ar-modes="webxr scene-viewer quick-look" camera-controls alt="" shadow-intensity=".25" touch-action="pan-y" environment-image="legacy" animation-loop="false" autoplay>
+       <model-viewer id="toggle-model" src="Steerad.glb"
+    ios-banner="https://example.com/customBanners/comingSoonBanner.html" ar
+    ar-modes="webxr scene-viewer quick-look" camera-controls alt=""
+    shadow-intensity=".25" touch-action="pan-y" environment-image="legacy"
+    animation-loop="false" autoplay>
             <div class=" progress-bar hide" slot="progress-bar">
             <div class="update-bar"></div>
     </div>
@@ -113,6 +115,10 @@
 
         const models = ['Steerad.glb', 'Steeradtext.glb', 'sterrad_anim.glb'];
         const toggleModel = document.querySelector('#toggle-model');
+        const modelViewer = document.querySelector('#toggle-model');
+
+          // Stop animation
+        modelViewer.pause();
         // let j = 0;
         // setInterval(() => toggleModel.setAttribute('src', `${models[j++ % 2]}`), 2000);
         function handleButtonDisplay(indx) {
