--- a/index.html
+++ b/index.html
@@ -1,204 +1,123 @@
-<!doctype html>
-<html lang="en" dir="ltr">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>STERRAD™ 100NX System</title>
-    <meta charset="utf-8">
-    <meta name="description" content="&lt;model-viewer&gt; template">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="./styles.css" rel="stylesheet" />
-    <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
-    <script src="https://cdn.jsdelivr.net/npm/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
-    <script src="https://threejs.org/build/three.min.js"></script>
-    <script src="./src/threejs_wasm_worker.js"></script>
-    <script href="https://developers.google.com/ar/develop/java/scene-viewer"></script>
-    <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>8th Wall & PlugXR Combined AR</title>
+  <script src="https://apps.8thwall.com/xrweb.js"></script>
+  <script type="module" src="https://cdn.plugxr.com/lib/pxr.js"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+    #ui-overlay {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    button {
+      background: #007bff;
+      color: white;
+      padding: 10px 15px;
+      margin: 5px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+  </style>
 </head>
-
 <body>
-    <div id="card">
-        <audio id="audio">
-            <source id="audio-source" src="Intro.mp3" type="audio/mpeg">
-        </audio>
-        <!-- <audio id="audio1">
-            <source src="parts.mp3" type="audio/mpeg">
-        </audio>
-        <audio id="audio2">
-            <source src="Usage.mp3" type="audio/mpeg">
-        </audio> -->
-       <model-viewer id="toggle-model" src="Steerad.glb"
-    ios-banner="https://example.com/customBanners/comingSoonBanner.html" ar
-    ar-modes="webxr scene-viewer quick-look" camera-controls alt=""
-    shadow-intensity=".25" touch-action="pan-y" environment-image="legacy"
-    animation-loop="false" autoplay>
-            <div class=" progress-bar hide" slot="progress-bar">
-            <div class="update-bar"></div>
-    </div>
-        <button slot="ar-button" id="ar-button">
-            View in 4D
-        </button>
-         
-    <div id="button" style="display:flex; justify-content: space-between; transform: translate(0px,0px);">
-        <img src="4.png" align="center" style="width:100px; padding-left: 5px;padding-top: 0px;" />
-        <img src="Cam.png" style="width:120px; padding-right: 5px;padding-top: 0px;" />
-    </div>
-    <div id="all">          
-    <button3 class="slide selected" id="1" id="textr" onclick="switchSrc(1,'USAGE.glb','Intro.mp3',show())"
-       style="transform:translateX(30px);" ><img src="Icon_2.png" id="youtube-icon" style="width:40px;height:40px;"></button3>
-    <a class="slide selected" id="11" onclick="switchSrc('sterrad_anim.glb')"></a>
-    <button1 class="slide selected" id="2" id="textrs" onclick="switchSrc(2,'Sterrad_PARTS.glb','parts.mp3',show())"
-        ><img src="Icon_1.png" id="youtube-icon" style="width:40px;height:40px;"></button1>
-    <a class="slide selected" id="22" onclick="switchSrc('Steeradtext.glb')"></a>
-    <button2 class="slide selected" id="3" id="textrst" onclick="switchSrc(3,'Steerad.glb','Usage.mp3',show())"
-        style="transform:translateX(-30px);"><img src="Icon.png" id="youtube-icon"
-            style="width:40px;height:40px;"></button2>
-    <a class="slide selected" id="33" onclick="switchSrc('Steerad.glb')"></a>
-     </div>
-    <div id="ar-prompt">
-        <img src="ar_hand_prompt.png">
-    </div>
+  <div id="ui-overlay">
+    <button id="startAR">Start AR</button>
+    <button id="toggleModel">Toggle Model</button>
+    <button id="toggleAnimation">Toggle Animation</button>
+    <button id="takeScreenshot">Take Screenshot</button>
+  </div>
 
-    </model-viewer>
-    <section class="attributiontwo">
-        <p style="background-image: url('black.png')"
-            style="width:60px;height:60px; padding-left: 0px;padding-top: 10px;">
+  <script>
+    let currentModel = null;
+    let animationPlaying = true;
 
-            <span>
-                <a
-                    href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf"><img
-                        src="Brochure.png" id="youtube-icon" align="center"
-                        style="width:30px;height:40px; padding-left: 17px;padding-top: 0px;"></a>
-                <a href="https://www.youtube.com/watch?v=39HnBANsPyo"><img src="Video.png" id="youtube-icon"
-                        align="center" style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
-                <a
-                    href="https://www.asp.com/en-in/products/low-temperature-gas-plasma-sterilization/sterrad-100nx-allclear"><img
-                        src="web.png" id="youtube-icon" align="center"
-                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
-                <a href="https://drive.google.com/file/d/1hFf5OK8XdV_q6UZ7WFcwiR3xrxWkUQ4Z/view?usp=sharing"><img
-                        src="serch.png" id="youtube-icon" align="center"
-                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
-                <a
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img
-                        src="form.png" id="youtube-icon" align="center"
-                        style="width:30px;height:40px; padding-left: 20px;padding-top: 0px;"></a>
+    // Initialize 8th Wall XR scene
+    XR8.addCameraPipelineModules([
+      XR8.GlTextureRenderer.pipelineModule(), // For rendering AR content
+      XR8.Threejs.pipelineModule(),          // Adds Three.js scene
+      XR8.XrController.pipelineModule(),     // Manages camera and AR tracking
+    ]);
 
-            </span>
+    const scene = XR8.Threejs.xrScene(); // Get Three.js scene and camera
+    const { renderer, camera, scene: threeScene } = scene;
 
-    </section>
-    <script>
-        function openURL() {
-            window.open("https://seventh-reality.github.io/Sterrad_Android_IOS/", "_blank"); // Opens in a new tab
-        }
-    </script>
-   
-    <script>
-        function show() {
-            /* Access image by id and change
-            the display property to block*/
-            document.getElementById('1')
-                .style.display = "none";
-        }
-        function show() {
-            /* Access image by id and change
-            the display property to block*/
-            document.getElementById('2')
-                .style.display = "none";
-        }
-        function show() {
-            /* Access image by id and change
-            the display property to block*/
-            document.getElementById('3')
-                .style.display = "none";
-        }
+    // Add PlugXR integration
+    const app = PXR.init({
+      root: threeScene,
+      renderer: renderer,
+      camera: camera,
+    });
 
-        const models = ['Steerad.glb', 'Steeradtext.glb', 'sterrad_anim.glb'];
-        const toggleModel = document.querySelector('#toggle-model');
-        const modelViewer = document.querySelector('#toggle-model');
-
-          // Stop animation
-        modelViewer.pause();
-        // let j = 0;
-        // setInterval(() => toggleModel.setAttribute('src', `${models[j++ % 2]}`), 2000);
-        function handleButtonDisplay(indx) {
-                document.getElementById("1").style.setProperty('display', 'inline');
-                document.getElementById("2").style.setProperty('display', 'inline');
-                document.getElementById("3").style.setProperty('display', 'inline');
-
-                // Set visibility based on the index
-                switch (indx) {
-                    case 2:
-                        document.getElementById("11").style.setProperty('display', 'inline');
-                        document.getElementById("22").style.setProperty('display', 'none');
-                        document.getElementById("33").style.setProperty('display', 'none');
-                        break;
-                    case 3:
-                        document.getElementById("11").style.setProperty('display', 'none');
-                        document.getElementById("22").style.setProperty('display', 'inline');
-                        document.getElementById("33").style.setProperty('display', 'none');
-                        break;
-                    default:
-                        document.getElementById("11").style.setProperty('display', 'none');
-                        document.getElementById("22").style.setProperty('display', 'none');
-                        document.getElementById("33").style.setProperty('display', 'inline');
-                        break;
-                }
-        }
-        function switchSrc(indx, src, audioSource) {
-        const modelViewer = document.querySelector('#toggle-model');
-
-        // Play the audio and then switch the model
-        playAudio(audioSource);
-        modelViewer.setAttribute('src', `${src}`);
-
-        // Play the animation for 1 minute (60000ms), then stop it
-        modelViewer.play();  // Start the animation
-        setTimeout(() => {
-            modelViewer.pause();  // Stop the animation after 1 minute
-        }, 11250);  // 1 minute = 60000 milliseconds
-
-        handleButtonDisplay(indx);
+    // Add a sample 3D model to the scene using PlugXR
+    function addModel() {
+      PXR.assets.loadModel('Steerad.glb', (model) => {
+        currentModel = model;
+        model.scale.set(0.5, 0.5, 0.5);
+        model.position.set(0, 0, -3); // Position in front of the user
+        threeScene.add(model);
+      });
     }
 
-    function stop() {
-        const modelViewer = document.querySelector('#toggle-model');
-        modelViewer.pause();
+    // Toggle Animation
+    function toggleAnimation() {
+      if (currentModel && currentModel.animations.length > 0) {
+        const action = PXR.modelAnimationByName(currentModel, 'Idle');
+        if (animationPlaying) {
+          action.stop();
+        } else {
+          action.play();
+        }
+        animationPlaying = !animationPlaying;
+      }
     }
 
-    function playAudio(newSrc) {
-        var audioElement = document.getElementById("audio");
-        var sourceElement = document.getElementById("audio-source");
-
-        // Update the source
-        sourceElement.src = newSrc;
-
-        // Load the new source
-        audioElement.load();
-
-        // Play the audio
-        audioElement.play();
+    // Take Screenshot
+    function takeScreenshot() {
+      PXR.xrScene().getscreenshot();
+      alert("Screenshot captured!");
     }
 
-    </script>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQL89QFMW8"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+    // Button Event Listeners
+    document.getElementById('startAR').addEventListener('click', () => {
+      XR8.run({ canvas: document.querySelector('canvas') }); // Start 8th Wall AR
+    });
 
-        gtag('config', 'G-YQL89QFMW8');
-    </script>
+    document.getElementById('toggleModel').addEventListener('click', addModel);
+    document.getElementById('toggleAnimation').addEventListener('click', toggleAnimation);
+    document.getElementById('takeScreenshot').addEventListener('click', takeScreenshot);
 
+    // Start 8th Wall and PlugXR AR
+    XR8.addCameraPipelineModule({
+      name: 'custom',
+      onUpdate: () => {
+        if (currentModel) {
+          currentModel.rotation.y += 0.01; // Rotate model for effect
+        }
+      },
+    });
 
-
-    </dev>
-    <script type="module" src="https://unpkg.com/@onirix/ar-engine-sdk@1.8.1/dist/ox-sdk.esm.js"></script>
-    <script type="module" src="model-viewer.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="model-viewer.min.js"></script>
-    <script src="script.js"></script>
+    XR8.run();
+  </script>
 </body>
-
 </html>
