--- a/index.html
+++ b/index.html
@@ -15,6 +15,53 @@
     <script src="./src/threejs_wasm_worker.js"></script>
     <script href="https://developers.google.com/ar/develop/java/scene-viewer"></script>
     <script src="https://applepay.cdn-apple.com/jsapi/v1/apple-pay-sdk.js"></script>
+     <style>
+        h5 {
+            text-align: center;
+            margin-top: -5px;
+            font-size: 9px;
+            color: #636363; /* Improves visibility */
+        }
+
+        .attributiontwo {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 10px 0;
+        }
+
+        .attributiontwo span {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: center;
+        }
+
+        .attributiontwo a {
+            margin: 15px;
+            text-decoration: none; /* Removes underline */
+           -webkit-tap-highlight-color: transparent; /* Removes blue highlight */
+        }
+
+        .icon {
+            width: 43px;
+            height: 43px;            
+        }
+        .icon:hover {
+            transform: scale(1.1);         
+        }
+
+        /* Responsive Design */
+        @media (max-width: 600px) {
+            .attributiontwo {
+                padding: 15px;
+            }
+            .icon {
+                width: 43px;
+                height: 43px;
+            }
+        }
+    </style>
 </head>
 
 <body>
