--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
             <span>
                 <a
                     href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf"><img
-                        src="Brochure.png" ></a>
-                <a href="https://www.youtube.com/watch?v=39HnBANsPyo"><img src="Video.png" ></a>
+                        src="Brochure_1.png" ></a>
+                <a href="https://www.youtube.com/watch?v=39HnBANsPyo"><img src="Video_1.png" ></a>
                 <a
                     href="https://www.asp.com/en-in/products/low-temperature-gas-plasma-sterilization/sterrad-100nx-allclear"><img
-                        src="web.png"></a>
+                        src="web_1.png"></a>
                 <a href="https://drive.google.com/file/d/1hFf5OK8XdV_q6UZ7WFcwiR3xrxWkUQ4Z/view?usp=sharing"><img
-                        src="serch.png" ></a>
+                        src="serch_1.png" ></a>
                 <a
                     href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img
-                        src="form.png"></a>
+                        src="form_1.png"></a>
             </span>
 
     </section>
