--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 
             <span>
                 <a
-                    href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf"><img
-                        src="Brochure_1.png" class="icon" ></a>
+                    href="https://www.asp.com/sites/default/files/2022-01/AD-160028-01-CT_D-MDR%20STERRAD_100NX_ALLCLear_DataSheet_MDR_digital_TM.pdf">
+                    <img src="Brochure_1.png" class="icon"></a>
                 <a href="https://www.youtube.com/watch?v=39HnBANsPyo"><img src="Video_1.png" class="icon" ></a>
                 <a href="https://www.asp.com/en-in/products/low-temperature-gas-plasma-sterilization/sterrad-100nx-allclear"><img
                         src="web_1.png" class="icon"></a>
             
                 <a  href="https://docs.google.com/forms/d/e/1FAIpQLSew4D56CSKpONvc30Ay7cLUY6FnPCOs7zK9IPYRLQWQPswbsg/viewform?usp=sf_link"><img
-                        src="form_1.png"></a>
+                        src="form_1.png" class="icon"></a>
             </span>
 
     </section>
