--- a/index.html
+++ b/index.html
@@ -52,24 +52,25 @@
         }
 
         /* AR Button Styling */
-        #ar-button {
-            background-color: #fff;
-            border-radius: 4px;
-            border: none;
-            position: absolute;
-            bottom: 16px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 8px 16px;
-            font-family: sans-serif;
-            font-weight: bold;
-            font-size: 14px;
-            color: #4285f4;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.25);
-            z-index: 10;
-            cursor: pointer;
-            display: block !important;
-        }
+        background-image: url(ar_icon.png);
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 12px 50%;
+  background-color: #efefef;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  bottom: 16px;
+  padding: 0px 16px 0px 40px;
+  font-family: Roboto Regular, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  color:#636363;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 18px;
+  border: 1px solid #DADCE0;
+  box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
 
         #ar-button:active {
             background-color: #e8eaed;
