--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         }
 
         /* AR Button Styling */
-        background-image: url(ar_icon.png);
+      #ar-button {
+  background-image: url(ar_icon.png);
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px 50%;
@@ -71,6 +72,7 @@
   border-radius: 18px;
   border: 1px solid #DADCE0;
   box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
+}
 
         #ar-button:active {
             background-color: #e8eaed;
