--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Model Viewer with AR</title>
-  
+   <link type="text/css" href="./styles.css" rel="stylesheet"/>
   <script type="module" src="model-viewer.min.js"></script>
   <style>
     .slide {
