--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       text-align: center;
       margin-bottom: 20px;
     }
+     #ar-button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
    
   </style>
 </head>
