--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     position: relative; /* Make it a positioning context */
   }
   #ar-button {
+    background-image: url(ar_icon.png);
     background-color: #007bff;
     color: white;
     border: none;
