--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   }
   #ar-button {
     background-image: url(ar_icon.png);
-    background-color: #007bff;
+     background-color: #efefef;
     color: white;
     border: none;
     padding: 10px 20px;
